--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <main>
       <section class="hero-image">
         <div class="container">
-          <h1 class="heading">Неопознанный Енот test</h1>
-          <p><!-- Тут ваш id на сайте Академии --></p>
+          <h1 class="heading">Неопознанный Енот</h1>
+          <p>id2149661</p>
         </div>
       </section>
 
